# libninja

./: .gitignore  Cargo.toml
core/src/: extractor.rs
core/src/extractor/: record.rs  resolution.rs
deepl_client_rs/: Cargo.toml  README.md
deepl_client_rs/examples/: create_glossary.rs  delete_glossary.rs  download_document.rs  get_document_status.rs  get_glossary.rs  get_glossary_entries.rs  get_languages.rs  get_usage.rs  list_glossaries.rs  list_glossary_languages.rs  translate_document.rs  translate_text.rs
deepl_client_rs/src/: lib.rs  model.rs  request.rs
deepl_client_rs/src/model/: context.rs  formality.rs  get_document_status_response.rs  get_usage_response.rs  glossary.rs  glossary_id.rs  glossary_source_language.rs  glossary_target_language.rs  ignore_tag_list.rs  list_glossaries_response.rs  list_glossary_languages_response.rs  non_splitting_tag_list.rs  outline_detection_option.rs  preserve_formatting_option.rs  source_language.rs  source_language_text.rs  split_sentences_option.rs  splitting_tag_list.rs  supported_languag.rs  tag_handling_option.rs  tag_list.rs  target_language_text.rs  translate_document_response.rs  translate_text_response.rs  translation.rs
deepl_client_rs/src/request/: create_glossary.rs  delete_glossary.rs  download_document.rs  get_document_status.rs  get_glossary.rs  get_glossary_entries.rs  get_languages.rs  get_usage.rs  list_glossaries.rs  list_glossary_languages.rs  translate_document.rs  translate_text.rs
hir/src/: lib.rs
libninja/src/: rust.rs
libninja/src/rust/: lower_hir.rs
(+4 files in other folders)
