[package]
name = "deepl_client_rs"
edition = "2021"
version = "0.4.0"
homepage = "pollin8/libninja"
documentation = "https://docs.rs/deepl_client_rs"
readme = "README.md"
license = "MIT"
repository = "pollin8/libninja"

[dependencies]
base64 = "0.21.0"
futures = "0.3.25"
httpclient = "0.20.2"
serde_json = "1.0.81"

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.oasgen]
version = "0.20.1"
features = ["chrono"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.18.2"
features = ["full"]

[lib]
doctest = false
required-features = []
